# gclipboard

./: AUTHORS  ChangeLog  Makefile  Makefile.am  README.md  bootstrap  clipboard_controller.hpp  clipboard_model.cpp  clipboard_model.hpp  clipboard_view.hpp  configure.ac  default_clipboard_controller.cpp  default_clipboard_controller.hpp  gtk_clipboard_model.cpp  gtk_clipboard_model.hpp  gtk_history_window_view.cpp  gtk_history_window_view.hpp  gtk_left_menu_view.cpp  gtk_left_menu_view.hpp  main.cpp  util.cpp  util.hpp
data/: Makefile.am  com.github.muesli4.gclipboard.gschema.xml
po/: Makevars  POTFILES.in  de.po  gclipboard.pot
src/: Makefile.am  clipboard_controller.hpp  clipboard_model.cpp  clipboard_model.hpp  clipboard_view.hpp  default_clipboard_controller.cpp  default_clipboard_controller.hpp  default_preferences_controller.cpp  default_preferences_controller.hpp  gsettings_preferences_model.cpp  gsettings_preferences_model.hpp  gtk_clipboard_model.cpp  gtk_clipboard_model.hpp  gtk_edit_entry_dialog.cpp  gtk_edit_entry_dialog.hpp  gtk_enabled_menu_item_view.cpp  gtk_enabled_menu_item_view.hpp  gtk_history_menu_view.cpp  gtk_history_menu_view.hpp  gtk_history_window_view.cpp  gtk_history_window_view.hpp  gtk_left_menu_view.cpp  gtk_left_menu_view.hpp  gtk_preferences_window.cpp  gtk_preferences_window.hpp  main.cpp  util.cpp
src/clipboard/: clipboard_model.hpp  clipboard_view.hpp  controller.hpp  model.cpp  model.hpp  request_type.hpp  view.hpp
src/freezable/: controller.hpp  model.cpp  model.hpp  request_type.hpp  view.hpp
src/freezable/.deps/: gclipboard-model.Po
src/preferences/: controller.hpp  model.cpp  model.hpp  preferences.hpp  session_data.hpp  view.hpp
src/util/: model_template.hpp
